--- a/app/package.json
+++ b/app/package.json
@@ -8,17 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^6.17.1",
     "next": "15.5.5",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
