--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.913.0",
     "next": "15.5.5",
-    "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "^0.34.4"
