--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.913.0",
+    "lucide-react": "^0.546.0",
     "next": "15.5.5",
     "postgres": "^3.4.7",
     "react": "19.1.0",
